refactoring using event
refactoring using event

--- a/aura/TodoCreateTaskContainer/TodoCreateTaskContainer.cmp
+++ b/aura/TodoCreateTaskContainer/TodoCreateTaskContainer.cmp
@@ -1,5 +1,5 @@
 <aura:component>
-    <aura:attribute name="taskList" type="String[]"/>
+    <aura:registerEvent name="createTask" type="c:TodoCreateTask"/>
     <div class="slds-grid slds-gutters slds-grid_vertical-align-end">
         <div class="slds-col">
             <span>
