--- a/aura/TodoContainer/TodoContainer.cmp
+++ b/aura/TodoContainer/TodoContainer.cmp
@@ -1,9 +1,11 @@
 <aura:component>
+    <aura:handler event="c:TodoDeleteTask" action="{!c.handleDeleteTask}" />
+    <aura:handler event="c:TodoCreateTask" action="{!c.handleCreateTask}" />
+
     <aura:attribute name="tasks" type="String[]" default="['Learn Salesforce', 'Lear Apex', 'Lear Lightning']" />
-    <aura:handler event="c:TodoDeleteTask" action="{!c.handleDeleteTask}"/>
-    
+
     <div class="slds-text-heading_large">Todo App</div>
 
-    <c:TodoCreateTaskContainer taskList="{!v.tasks}"/>
-    <c:TodoTaskContainer taskList="{!v.tasks}"/>
+    <c:TodoCreateTaskContainer />
+    <c:TodoTaskContainer taskList="{!v.tasks}" />
 </aura:component>
